-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22
-
Component/s: hotspot
-
b20
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8346403 | 21.0.7 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
Seems we miss on AIX and Linux the handling of pthread_attr_init return value and sometimes in special cases destroying the related pthread_attr_t object.
- backported by
-
JDK-8346403 pthread_attr_init handle return value and destroy pthread_attr_t object
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/ec310fe8
-
Commit(master)
openjdk/jdk21u-dev/2867acd2
-
Review
openjdk/jdk/16147
-
Review(master)
openjdk/jdk21u-dev/1235