8317919: pthread_attr_init handle return value and destroy pthread_attr_t object

Backport-of: ec310fe80971261ab7ee1141c64ffd600e7546c0